# modern-c-

./: .gitignore  README.md
homework1/task_2/: CMakeLists.txt  README.md
homework2/task1/: CMakeLists.txt  test_task_1.sh
homework2/task1/src/: guess.cpp
homework2/task2/: CMakeLists.txt  task2.cpp
homework3/: CMakeLists.txt  README.md  create_website.sh
homework3/api/: html_writer.cpp  image_browser.cpp  image_browser.hpp
homework3/install/include/: homework_3.h
homework3/install/include/api/: image_browser.hpp
homework3/src/: CMakeLists.txt  create_webpage.cpp  html_writer.cpp  image_browser.cpp
homework3/web_app/: test.html
task_2/src/: CMakeLists.txt
