cmake_minimum_required(VERSION 3.20)
project(homework3)
set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}")
add_executable(create_web_site src/create_webpage.cpp)
add_subdirectory(src)
target_link_libraries(create_web_site PUBLIC homework_3 fmt)
install(TARGETS homework_3 DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
install(DIRECTORY include/api DESTINATION ${CMAKE_INSTALL_PREFIX}/install/include)
install(FILES include/homework_3.h DESTINATION ${CMAKE_INSTALL_PREFIX}/install/include)
install(TARGETS create_web_site DESTINATION ${CMAKE_INSTALL_PREFIX}/results/bin)
