cmake_minimum_required(VERSION 3.20)
project(task2) 
add_subdirectory(src)
add_executable(main src/main.cpp)
set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}")
target_link_libraries(main PUBLIC operation)
install(TARGETS operation DESTINATION ${CMAKE_INSTALL_PREFIX}/install/lib)
install(DIRECTORY include/ipb_arithmetic DESTINATION ${CMAKE_INSTALL_PREFIX}/install/include)
install(FILES include/ipb_arithmetic.hpp DESTINATION ${CMAKE_INSTALL_PREFIX}/install/include)
install(TARGETS main DESTINATION ${CMAKE_INSTALL_PREFIX}/results/bin)
install(TARGETS operation DESTINATION ${CMAKE_INSTALL_PREFIX}/results/lib)
